# channelServer

./: .dockerignore  .gitignore  .gitpod.yml  Dockerfile  Makefile  README.md  _tcp.py  client.py  client_tcp.py  index.html  pyproject.toml  pytest.ini  server.py
.devcontainer/: .devcontainer.json  devcontainer.json
channel_server/: channel_server.py  index.html
tests/: test_server_client.py
